--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@react-three/drei": "^10.7.6",
+		"@react-three/fiber": "^9.3.0",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tanstack/react-query": "^5.69.0",
 		"@trpc/client": "^11.0.0",
 		"@trpc/react-query": "^11.0.0",
 		"@trpc/server": "^11.0.0",
+		"@types/three": "^0.180.0",
+		"color": "^5.0.2",
+		"motion": "^12.23.22",
 		"next": "^15.2.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"server-only": "^0.0.1",
 		"superjson": "^2.2.1",
+		"three": "^0.180.0",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
